--- a/App.BLL.Contracts/App.BLL.Contracts.csproj
+++ b/App.BLL.Contracts/App.BLL.Contracts.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <ProjectReference Include="..\App.BLL.DTO\App.BLL.DTO.csproj" />
     <ProjectReference Include="..\App.DAL.Contracts\App.DAL.Contracts.csproj" />
+    <ProjectReference Include="..\App.Public.DTO\App.Public.DTO.csproj" />
     <ProjectReference Include="..\Base.Contracts.BLL\Base.BLL.Contracts.csproj" />
   </ItemGroup>
 
