--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,7 +2,7 @@
         <PropertyGroup>
             <LangVersion>latest</LangVersion>
             <Nullable>enable</Nullable>
-            <WarningsAsErrors>CS8600,CS8602,CS8603,CS8613,CS8618,CS8625</WarningsAsErrors>
+            <WarningsAsErrors>CS8600,CS8602,CS8613,CS8618,CS8625</WarningsAsErrors>
             <NoWarn>$(NoWarn);1591</NoWarn>
         </PropertyGroup>
 </Project>
